--- a/stage1/task5/style.css
+++ b/stage1/task5/style.css
@@ -15,7 +15,7 @@ h1{
     position: absolute;
 }
 .head ul{
-    margin-left: 950px;
+    margin-left: 70%;
 }
 .head li{
     float: left;
@@ -37,7 +37,7 @@ h1{
     margin-left: 20px;
 }
 .one{
-    width: 910px;
+    width: 66%;
     height: 810px;
     background-color: #fff;
     border-bottom: 2px solid #9F9F9F;
@@ -69,7 +69,7 @@ h1{
     padding: 20px;
 }
 .two{
-    width: 910px;
+    width: 66%;
     height: 710px;
     background-color: #fff;
     border-bottom: 2px solid #9F9F9F;
@@ -105,7 +105,7 @@ h1{
     list-style: none;
 }
 .three{
-    width: 910px;
+    width: 66%;
     height: 400px;
     background-color: #fff;
     border-bottom: 2px solid #9F9F9F;
@@ -133,7 +133,7 @@ h1{
     margin-top: 10px;
 }
 .four{
-    width: 910px;
+    width: 66%;
     height: 430px;
     background-color: #fff;
     border-bottom: 2px solid #9F9F9F;
@@ -184,7 +184,7 @@ h1{
     background-color: #CCC;
 }
 .right{
-    width:375px;
+    width:30%;
     height:500px;
     line-height: 2em;
     background-color: #fff;
@@ -192,6 +192,7 @@ h1{
     border-right: 2px solid #9F9F9F;
     float: right;
     margin-right: 20px;
+    margin-top: -180.5%;
 }
 .right h3{
     margin: 20px;
