--- a/stage4/task51/main.css
+++ b/stage4/task51/main.css
@@ -1,4 +1,63 @@
-body{
+*{
     margin: 0;
-    height: 0;
+    padding: 0;
+}
+header{
+    width: 100%;
+    height: 60px;
+    background-color: #222;
+}
+header h1{
+    font-family: "Gisha";
+    font-weight: normal;
+    color: #fff;
+    line-height: 60px;
+    margin-left: 60px;
+}
+main{
+    width: 1000px;
+    float: left;
+    margin-top: 20px;
+    margin-left: 50px;
+}
+aside{
+    width:200px;
+    height: 500px;
+    float: right;
+    border: 2px solid #222;
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-right: 50px;
+}
+aside ul{
+    list-style: none;
+    text-align: center;
+}
+aside ul li{
+    margin-top: 40px;
+}
+aside ul li a{
+    font-family: "微软雅黑";
+    text-decoration: none;
+    letter-spacing: 2px;
+    border: 1px solid #222;
+    border-radius: 5px;
+}
+
+
+
+/*瀑布布局*/
+#gallery{
+    position: relative;
+}
+.picture{
+    padding: 10px;
+    border: 1px solid #CCC;
+    border-radius: 5px;
+    box-shadow: 0 0 6px #CCC;
+    float: left;
+}
+.picture img{
+    width: 165px;
+    height: auto;
 }
