--- a/stage4/task51/main.css
+++ b/stage4/task51/main.css
@@ -29,20 +29,67 @@ aside{
     margin-top: 20px;
     margin-right: 50px;
 }
-aside ul{
-    list-style: none;
-    text-align: center;
-}
-aside ul li{
-    margin-top: 40px;
-}
-aside ul li a{
-    font-family: "微软雅黑";
-    text-decoration: none;
-    letter-spacing: 2px;
+aside input{
+    width: 160px;
+    height: 30px;
+    background-color: #222;
     border: 1px solid #222;
-    border-radius: 5px;
+    font-family: "Gisha";
+    font-size: 18px;
+    color: #fff;
+    margin-top: 10px;
+    margin-left: 20px;
 }
+aside label{
+    display: block;
+    margin-left: 20px;
+    font-family: "Gisha";
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 30px;
+}
+#fullScreen{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: none;
+}
+#fullScreen .bg{
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+}
+#fullScreen img{
+    /*max-width: 80%;
+    max-height: 80%;*/
+    width: auto;
+    height: 600px;
+    margin-top: 20px;
+    border: 2px solid #fff;
+}
+#fullScreen #left,#fullScreen #right{
+    width: 50px;
+    height: 50px;
+    color: rgba(0,0,0,0.7);
+    font-size: 100px;
+    font-weight: bold;
+    line-height: 50px;
+    position: absolute;
+    top:300px;
+    background-color: rgba(0,0,0,0);
+    border: 1px solid rgba(0,0,0,0);
+    cursor: pointer;
+}
+#left{
+    left: 40px;
+}
+#right{
+    right: 40px;
+}
+
 
 
 
@@ -60,4 +107,5 @@ aside ul li a{
 .picture img{
     width: 165px;
     height: auto;
+    cursor: pointer;
 }
