实现了图片全屏时左右切换图片

--- a/stage4/task51/main.css
+++ b/stage4/task51/main.css
@@ -69,6 +69,7 @@ aside label{
     height: 600px;
     margin-top: 20px;
     border: 2px solid #fff;
+    cursor: pointer;
 }
 #fullScreen #left,#fullScreen #right{
     width: 50px;
