--- a/stage4/task51/main.css
+++ b/stage4/task51/main.css
@@ -6,6 +6,8 @@ header{
     width: 100%;
     height: 60px;
     background-color: #222;
+    position: fixed;
+    z-index: 1;
 }
 header h1{
     font-family: "Gisha";
@@ -16,8 +18,9 @@ header h1{
 }
 main{
     width: 1000px;
+    height:auto;
     float: left;
-    margin-top: 20px;
+    margin-top: 80px;
     margin-left: 50px;
 }
 aside{
@@ -26,38 +29,81 @@ aside{
     float: right;
     border: 2px solid #222;
     border-radius: 5px;
-    margin-top: 20px;
+    margin-top: 80px;
     margin-right: 50px;
 }
-aside ul{
-    list-style: none;
-    text-align: center;
-}
-aside ul li{
-    margin-top: 40px;
-}
-aside ul li a{
-    font-family: "微软雅黑";
-    text-decoration: none;
-    letter-spacing: 2px;
+aside input{
+    width: 160px;
+    height: 30px;
+    background-color: #222;
     border: 1px solid #222;
-    border-radius: 5px;
+    font-family: "Gisha";
+    font-size: 18px;
+    color: #fff;
+    margin-top: 10px;
+    margin-left: 20px;
+    cursor: pointer;
+}
+#imgNum{
+    cursor: text;
+}
+aside label{
+    display: block;
+    margin-left: 20px;
+    font-family: "Gisha";
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 30px;
+}
+#fullScreen{
+    position: fixed;
+    z-index: 2;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: none;
+}
+#fullScreen .bg{
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+}
+#fullScreen img{
+    /*max-width: 80%;
+    max-height: 80%;*/
+    width: auto;
+    height: 600px;
+    margin-top: 20px;
+    border: 2px solid #fff;
+    cursor: pointer;
+}
+#fullScreen #left,#fullScreen #right{
+    width: 50px;
+    height: 50px;
+    color: rgba(0,0,0,0.7);
+    font-size: 100px;
+    font-weight: bold;
+    line-height: 50px;
+    position: absolute;
+    top:300px;
+    background-color: rgba(0,0,0,0);
+    border: 1px solid rgba(0,0,0,0);
+    cursor: pointer;
+}
+#left{
+    left: 40px;
+}
+#right{
+    right: 40px;
 }
 
 
 
-/*瀑布布局*/
-#gallery{
-    position: relative;
-}
-.picture{
-    padding: 10px;
-    border: 1px solid #CCC;
-    border-radius: 5px;
-    box-shadow: 0 0 6px #CCC;
-    float: left;
-}
-.picture img{
-    width: 165px;
-    height: auto;
-}
+
+
+
+
+
+
