--- a/stage4/task51/main.css
+++ b/stage4/task51/main.css
@@ -37,8 +37,8 @@ aside input{
     height: 30px;
     background-color: #222;
     border: 1px solid #222;
-    font-family: "Gisha";
-    font-size: 18px;
+    font-family: "微软雅黑";
+    font-size: 16px;
     color: #fff;
     margin-top: 10px;
     margin-left: 20px;
@@ -50,7 +50,7 @@ aside input{
 aside label{
     display: block;
     margin-left: 20px;
-    font-family: "Gisha";
+    font-family: "微软雅黑";
     font-size: 18px;
     font-weight: bold;
     margin-top: 30px;
